versions/v2.9/modules/en/pages/integrations/longhorn/overview.adoc
= Overview
:page-languages: [en, zh]
:revdate: 2025-06-20
:page-revdate: {revdate}
:community-path: integrations-in-rancher/longhorn/overview.adoc
:product-path: integrations/longhorn/overview.adoc
ifeval::["{build-type}" != "community"]
:url-storage-overview: https://documentation.suse.com/cloudnative/storage/{longhorn-docs-version}/en/longhorn-documentation.html
:url-storage-concepts: https://documentation.suse.com/cloudnative/storage/{longhorn-docs-version}/en/introduction/concepts.html
:url-storage-requirements: https://documentation.suse.com/cloudnative/storage/{longhorn-docs-version}/en/installation-setup/requirements.html
:url-storage-settings: https://documentation.suse.com/cloudnative/storage/{longhorn-docs-version}/en/longhorn-system/settings.html
endif::[]
ifeval::["{build-type}" == "community"]
:url-storage-overview: https://longhorn.io/docs/{longhorn-docs-version}
:url-storage-concepts: https://longhorn.io/docs/{longhorn-docs-version}/concepts/
:url-storage-requirements: https://longhorn.io/docs/{longhorn-docs-version}/deploy/install/
:url-storage-settings: https://longhorn.io/docs/{longhorn-docs-version}/references/settings/
endif::[]

https://documentation.suse.com/cloudnative/storage/{longhorn-docs-version}/en/longhorn-documentation.html[{longhorn-product-name}] is a lightweight, reliable, and easy-to-use distributed block storage system for Kubernetes.

Longhorn is free, open source software. Originally developed by Rancher Labs, it is now being developed as a sandbox project of the Cloud Native Computing Foundation. It can be installed on any Kubernetes cluster with Helm, with kubectl, or with the Rancher UI. You can learn more about its architecture {url-storage-concepts}[here.]

With Longhorn, you can:

* Use Longhorn volumes as persistent storage for the distributed stateful applications in your Kubernetes cluster
* Partition your block storage into Longhorn volumes so that you can use Kubernetes volumes with or without a cloud provider
* Replicate block storage across multiple nodes and data centers to increase availability
* Store backup data in external storage such as NFS or AWS S3
* Create cross-cluster disaster recovery volumes so that data from a primary Kubernetes cluster can be quickly recovered from backup in a second Kubernetes cluster
* Schedule recurring snapshots of a volume, and schedule recurring backups to NFS or S3-compatible secondary storage
* Restore volumes from backup
* Upgrade Longhorn without disrupting persistent volumes

.Longhorn Dashboard
image::longhorn-screenshot.png[{longhorn-product-name} Dashboard]

== Installing {longhorn-product-name} with Rancher

. Fulfill all {url-storage-requirements}[Installation Requirements.]
. Go to the cluster where you want to install Longhorn.
. Click *Apps*.
. Click *Charts*.
. Click *Longhorn*.
. Optional: To customize the initial settings, click *Longhorn Default Settings* and edit the configuration. For help customizing the settings, refer to the {url-storage-settings}[{longhorn-product-name} documentation.]
. Click *Install*.

*Result:* Longhorn is deployed in the Kubernetes cluster.

== Accessing {longhorn-product-name} from the Rancher UI

. Go to the cluster where Longhorn is installed. In the left navigation menu, click *Longhorn*.
. On this page, you can edit Kubernetes resources managed by Longhorn. To view the Longhorn UI, click the *Longhorn* button in the *Overview* section.

*Result:* You will be taken to the Longhorn UI, where you can manage your Longhorn volumes and their replicas in the Kubernetes cluster, as well as secondary backups of your Longhorn storage that may exist in another Kubernetes cluster or in S3.

== Uninstalling {longhorn-product-name} from the Rancher UI

. Go to the cluster where Longhorn is installed and click *Apps*.
. Click *Installed Apps*.
. Go to the `longhorn-system` namespace and check the boxes next to the `longhorn` and `longhorn-crd` apps.
. Click *Delete,* and confirm *Delete*.

*Result:* Longhorn is uninstalled.

== GitHub Repository

The Longhorn project is available https://github.com/longhorn/longhorn[here.]

== Documentation

The Longhorn documentation is {url-storage-overview}[here.]

== Architecture

Longhorn creates a dedicated storage controller for each volume and synchronously replicates the volume across multiple replicas stored on multiple nodes.

The storage controller and replicas are themselves orchestrated using Kubernetes.

You can learn more about its architecture {url-storage-concepts}[here.]

.Longhorn Architecture
image::longhorn-architecture.svg[{longhorn-product-name} Architecture]
